# DarkModeStatusService

./: CMakeLists.txt  README.md
include/: DarkModeDetection.hxx  DarkModeStatusService.hxx
source/: DarkModeDetection.cxx  DarkModeStatusService_win32.cxx  main.cxx
